--- a/src/blocks/article-preview/article-preview.scss
+++ b/src/blocks/article-preview/article-preview.scss
@@ -4,7 +4,7 @@
 
 .article-preview {
 
-  $block-name:                &; // #{$block-name}__element
+  $block-name: &; // #{$block-name}__element
 
 
   &__inner {
@@ -15,6 +15,17 @@
 
   &__img {
     max-width: 100%;
+    height: 179px;
+
+    @media (min-width: 480px) {
+      height: 335px;
+    }
+
+    @media (min-width: $screen-md) {
+      height: auto;
+
+    }
+
     img {
       width: 100%;
       height: 100%;
@@ -22,12 +33,16 @@
     }
   }
 
-  &__content {
-    display: none;
-  }
+  // &__content {
+  //   display: none;
+  // }
 
   &__text {
     padding: 20px 30px 30px;
+
+    @media (min-width: $screen-xxl) {
+      padding-left: 40px;
+    }
   }
 
 
