--- a/src/blocks/features/features.pug
+++ b/src/blocks/features/features.pug
@@ -19,7 +19,7 @@ mixin features(mods)
     }
 
   .features(class=allMods)&attributes(attributes)
-    .features__list
+    .features__list.xxl_-ml-20px
       block
 
 
@@ -37,7 +37,7 @@ mixin features-item(props={},mods)
 
   .features__item.slider-card(class=allMods)&attributes(attributes)
     .features__item-inner.slider-card__inner
-      .features__icon
+      .features__icon.mr-10px.xxl_mr-20px
         +svg(props.icon,props.iconClasses)
       .features__header!= props.title
       .features__text!= props.text
