--- a/src/blocks/field-select/field-select.scss
+++ b/src/blocks/field-select/field-select.scss
@@ -15,18 +15,23 @@
 
   &__wrapper {
     position: relative;
+    background-image: url('../img/angle-down.svg');
+    background-size: 7px 5px;
+    background-repeat: no-repeat;
+    background-color: $tw-gray-100;
+    background-position: right 10px top 50%;
 
-    &::after {
-      content: '\f107';
-      position: absolute;
-      right: 15px;
-      top: 50%;
-      @apply font-icon;
-      font-weight: 900;
-      font-size: 10px;
-      color: $tw-black;
-      transform: translateY(-50%);
-    }
+    // &::after {
+    //   content: '\f107';
+    //   position: absolute;
+    //   right: 15px;
+    //   top: 50%;
+    //   @apply font-icon;
+    //   font-weight: 900;
+    //   font-size: 10px;
+    //   color: $tw-black;
+    //   transform: translateY(-50%);
+    // }
 
     select {
       padding: 6px 15px;
@@ -34,7 +39,7 @@
       line-height: 28px;
       color: $tw-black;
       appearance: none;
-      background-color: $tw-gray-100;
+      background-color: transparent;
     }
   }
 
