--- a/src/blocks/page-header/page-header.scss
+++ b/src/blocks/page-header/page-header.scss
@@ -7,10 +7,13 @@
   top: 0;
   left: 0;
   right: 0;
-  min-height: 90px;
   z-index: 50;
   background-color: #fff;
   border-bottom: 1px solid $tw-gray-200;
+
+  @media (min-width: $screen-xxl) {
+    min-height: 90px;
+  }
 
   &__inner {
     display: flex;
