--- a/src/blocks/product-actions/product-actions.scss
+++ b/src/blocks/product-actions/product-actions.scss
@@ -14,7 +14,12 @@
   margin-top: 16px;
 
   .product-info & {
-    margin-top: auto;
+    margin-top: 16px;
+
+    @media (min-width: $screen-md) {
+      margin-top: auto;
+    }
+
     @media (min-width: $screen-lg) {
       margin-top: 16px;
     }
