--- a/src/blocks/product-info/product-info.pug
+++ b/src/blocks/product-info/product-info.pug
@@ -58,6 +58,5 @@ mixin product-info-view(props={}, mods)
     }
 
   .product-info__view.slider__item(class=allMods)&attributes(attributes)
-    p.text-black= props.test
     .product-info__view-inner
-      .product-info-view-content
+      .product-info__view-content.cloudimage-360#gurkha-suv(data-folder="img/3d/" data-filename-x="{index}_rikta_3d_w500.jpg" data-amount-x="36")
