--- a/src/scss/test.scss
+++ b/src/scss/test.scss
@@ -8,9 +8,9 @@
 //   outline: 2px solid green !important;
 // }
 
-// .page-header {
-//   display: none !important;
-// }
+// // .page-header {
+// //   display: none !important;
+// // }
 
 // img {
 //   opacity: 0;
